--- a/styles.css
+++ b/styles.css
@@ -19,15 +19,14 @@ body {
 
 /* Background Image */
 .picture__top {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     z-index: -1;
 }
 
 .picture__bottom {
-    position: absolute;
-    top: 0;
+    position: fixed;    
     bottom: 0;
     right: 0;
     z-index: -1;
